<resources>
    <string name="app_name">ColorPicker</string>
    <string name="color_picker">Slide the circles to change the color displayed</string>
    <string name="changing_color">Changing color displayed...</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="save_color">Save Color</string>
    <string name="action_settings">Settings</string>
    <string name="logo">Logo</string>
    <string name="name_of_color">Name of Color</string>
    <string name="title_activity_display_saved">DisplaySaved</string>
    <string name="returnButton">Return</string>
</resources>
