<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pandamac.colorpicker.MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/color_picker"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorDisplay"
        app:layout_constraintVertical_bias="0.019" />

    <SurfaceView
        android:id="@+id/colorDisplay"
        android:layout_width="250dp"
        android:layout_height="130dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <SeekBar
        android:id="@+id/redBar"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <SeekBar
        android:id="@+id/blueBar"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/redBar" />

    <SeekBar
        android:id="@+id/greenBar"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blueBar" />

    <TextView
        android:id="@+id/redLabel"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginEnd="12dp"
        android:text="@string/red"
        app:layout_constraintBottom_toBottomOf="@+id/redBar"
        app:layout_constraintEnd_toStartOf="@+id/redBar"
        app:layout_constraintTop_toTopOf="@+id/redBar"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/blueLabel"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginEnd="12dp"
        android:text="@string/blue"
        app:layout_constraintBottom_toBottomOf="@+id/blueBar"
        app:layout_constraintEnd_toStartOf="@+id/blueBar"
        app:layout_constraintTop_toTopOf="@+id/blueBar"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/greenLabel"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginEnd="12dp"
        android:text="@string/green"
        app:layout_constraintBottom_toBottomOf="@+id/greenBar"
        app:layout_constraintEnd_toStartOf="@+id/greenBar"
        app:layout_constraintTop_toTopOf="@+id/greenBar" />

    <TextView
        android:id="@+id/progressR"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="12dp"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/redBar"
        app:layout_constraintStart_toEndOf="@+id/redBar"
        app:layout_constraintTop_toTopOf="@+id/redBar"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/progressB"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="12dp"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/blueBar"
        app:layout_constraintStart_toEndOf="@+id/blueBar"
        app:layout_constraintTop_toTopOf="@+id/blueBar" />

    <TextView
        android:id="@+id/progressG"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="12dp"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/greenBar"
        app:layout_constraintStart_toEndOf="@+id/greenBar"
        app:layout_constraintTop_toTopOf="@+id/greenBar" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name_of_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greenBar"
        app:layout_constraintVertical_bias="0.243" />

    <Button
        android:id="@+id/returnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/returnButton"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

</android.support.constraint.ConstraintLayout>
